...
                                   self->selectedStatusId= dic[@"id"];
                                   
                                   NSLog(@"id is : %@",self->selectedStatusId);
                               }
                           }
                           
                           if([self->selectedStatusName isEqualToString:@"Closed"] || [self->selectedStatusName isEqualToString:@"closed"])
                           {
                               [self->utils showAlertWithMessage:NSLocalizedString(@"Ticket is Already Closed",nil) sendViewController:self];
                               [SVProgressHUD dismiss];
                           }
                           else{
                               
...
